<resources>
    <string name="app_name">Teny Mana</string>
    <string name="app_footer_text">Zaraina maimaim-poana 💚</string>
    <string name="app_slogan">"Fa toy izao no nitiavan' Andriamanitra izao tontolo izao: nomeny ny Zanani-lahy Tokana, mba tsy ho very izay rehetra mino Azy, fa hanana fiainana mandrakizay. Jaona 3:16"</string>
    <string name="app_menu_desc">Menu</string>
    <string name="app_start_desc">Kintana</string>
    <string name="app_score_desc">Isa</string>
    <string name="app_action_done">Vita</string>
    <string name="app_action_games">Kilalao</string>
    <string name="app_action_play">Hilalao</string>
    <string name="app_action_next">Tohizana</string>
    <string name="app_action_delete">Fafana</string>
    <string name="app_expand_collapse_img_description">Angezana na akelezina</string>
    <string name="app_undo_desc">Averina</string>
    <string name="app_confirm_delete">Fafana ve?</string>
    <string name="app_yes">Eny</string>
    <string name="app_no">Tsia</string>
    <string name="app_help">Fanazavana</string>

    <string name="paths_screen_prev_description">Aseho ny teo aloha</string>
    <string name="paths_screen_next_description">Aseho ny manaraka</string>
    <string name="paths_screen_path_title">%s\n%s %d</string>
    <string name="path_details_verse_ref">%s %d:%d-%d</string>
    <string name="solution_expand_verses">Sokafana manontolo</string>
    <string name="solution_verse_item">%d- %s</string>
    <string name="solution_expand_description">Sokafana manontolo</string>

    <string name="puzzle_bonus_desc">Mila fanampiana</string>

    <!-- Bible screen -->
    <string name="bible_title">Baiboly</string>
    <string name="bible_close">Akatona</string>

    <!-- Journey editor -->
    <string name="journeyEd_title">Hamorona fandaharana</string>
    <string name="journey_title">Lohateny:</string>
    <string name="journey_title_hint">Oh: "Mofon'aina Janoary 2021"</string>
    <string name="journey_description">Mombamomba azy:</string>
    <string name="journey_description_hint">Oh: "vakiteny isan'andro vokarin'ny Sekoly Alahady"</string>
    <string name="journey_path_title">Dingana</string>
    <string name="journey_verses_title">Andinin-tSoratra Masina:</string>
    <string name="journey_path_book">Boky</string>
    <string name="journey_path_chapter">Toko</string>
    <string name="journey_path_verse">Andininy</string>
    <string name="journey_path_endVerse">Hatramin\'ny</string>
    <string name="journey_path_description_title">Fampianarana na lesona na toriteny:</string>
    <string name="journey_path_title_hint">Oh: "Ny asan'ny Fanahy Masina"</string>
    <string name="journey_no_path_hint">Mila manampy dingana iray na maromaro ianao. Tsindrio eto.</string>

    <!-- Journey download -->
    <string name="journey_dld_title">Haka fandaharana</string>
    <string name="journey_dld_net_err">Misy olana ny internet</string>
    <string name="journey_dld_downloaded">Azo so aman-tsara ny fandaharana</string>
    <string name="journey_dld_prev_page">Pejy to aloha</string>
    <string name="journey_dld_next_page">Pejy manaraka</string>
    <string name="journey_dld_no_data">Tsy misy fandaharana hafa intsony</string>

    <!-- Help -->
    <string name="help_link_clear_title">Teny tsipihina</string>
    <string name="help_lk_summary">
        ##Ny fomba filalao azy:\n
        "   "Eo ambony **(1)** no ahitana ilay andinin-tSoratra Masina hotadiavina ka miseho ireo teny efa hita.\n
        "   "Misesy avy any aloha ny fitrangan\'ny teny tadiavina.\n
        "   "**(2)** Tsipiho midaboka na mitsangana ary hajanony rehefa feno ny teny.\n
        "   "**(3)** Mamerina ny teny izay voasokatra __(raha toa ka nahasokatra ankoatran\'ny teny voalohany mbola tsy miseho)__\n
        "   "**(4)** Mampiseho ny voalohany amin\'ny teny azo tsipihina\n
        "   "**(5)** Manokatra ampahany amin\'ireo teny mbola tsy fantatra **(1)**.
    </string>

    <string name="help_hw_title">Teny miafina</string>
    <string name="help_hw_summary">
        ##Ny fomba filalao azy:\n
        "   "Eo ambony **(1)** no ahitana ilay andinin-tSoratra Masina hotadiavina ka miseho ireo teny efa hita.\n
        "   "Misesy avy any aloha ny fitrangan\'ny teny tadiavina.\n
        "   "Ireo litera rehetra miseho **(6)** dia mahavita teny maromaro. Safidiana izay litera heritreretinao
        fa mahavita iray amin\'ireo teny tadiavina ary tsindriana ny bokotra **(5)** raha alefa ary **(4)** raha hajanona.\n
        "   "Rehefa hita ny teny rehetra dia miseho ilay teny miafina **(2)** ary misokatra ireo teny hafa mila karohina.\n
        "   "Ny bokotra **(7)** no ahafahana manokatra ampahany amin\'ny teny mbola tsy hita.\n
        "   "Ny bokotra **(8)** no ahafahana mijery ny andian-teny hafa.\n\n
        "   "__(*) Raha toa ka nisy diso ny teny voasokatrao ka tsy mey tohizana intsony dia tsindrio ny **(8)** hanokafana ny andian-teny manaraka.
    </string>

    <string name="help_anagram_title">Teny mikorontana</string>
    <string name="help_anagram_summary">
        ##Ny fomba filalao azy:\n
        "   "Eo ambony **(1)** no ahitana ilay andinin-tSoratra Masina hotadiavina ka miseho ireo teny efa hita.\n
        "   "Miseho tsirairay misesy avy any aloha ny teny ka ny litera rehetra no mandrafitra ilay teny hotadiavina.\n
        "   "Tsindriana tsirairay ny litera ao @ **(5)** ary mifindra mankeo amin\'ny **(3)**.\n
        "   "Rehefa eo @ **(3)** avokoa ny litera rehetra dia tsindrina ny bokotra **(4)** hitsarana azy na ny bokotra **(2)** raha haverina.
        "   "Miseho ny teny manaraka raha marina fa miverina eo ambany **(5)** kosa ireo litera rehetra raha diso.\n\n
        __Raha tsy hainao ny teny dia afaka tsindriana ny bokotra__ **(6)** __mba hampiseo ampahany amin\'ny teny eo ambony **(1).
    </string>

    <!-- Loader-->
    <string name="loader_text">Jesosy Kristy no lalana sy fahamarinana ary fiainana.</string>
</resources>