<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/journeyEditorScreen"
        style="@style/AppTheme.DarkMainCont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.HomeAppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/journeyEd_title" />

        <LinearLayout
            style="@style/AppTheme.PageBodyLight"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.FormFieldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journey_title" />

            <EditText
                android:id="@+id/journeyNameValue"
                style="@style/AppTheme.TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/journey_title_hint"
                android:inputType="text" />

            <TextView
                style="@style/AppTheme.FormFieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/journey_description" />

            <EditText
                android:id="@+id/journeyDescriptionValue"
                style="@style/AppTheme.TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="top"
                android:hint="@string/journey_description_hint"
                android:inputType="textMultiLine"
                android:lines="3" />

            <TextView
                style="@style/AppTheme.FormFieldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journey_path_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/jEditor_Cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bible_close" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/jEditor_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_action_done" />

        </LinearLayout>

    </LinearLayout>

</layout>
