<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="mg.maniry.tenymana.ui.journeyEditor.JourneyEditorVM" />
    </data>

    <LinearLayout
        style="@style/AppTheme.DarkMainCont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.BibleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Path 1" />

        <LinearLayout
            style="@style/AppTheme.PageBodyLight"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.FormFieldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journey_title" />

            <EditText
                android:id="@+id/pathTitleValue"
                style="@style/AppTheme.TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/journey_path_title_hint"
                android:inputType="text"
                android:text="@={viewModel.pathTitle}" />

            <TextView
                style="@style/AppTheme.FormFieldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journey_verses_title" />

            <TableLayout
                style="@style/AppTheme.TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        style="@style/AppTheme.DescriptionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/journey_path_book" />

                    <Spinner
                        android:id="@+id/pathBookValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="75dp" />

                    <TextView
                        style="@style/AppTheme.DescriptionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/journey_path_chapter" />

                    <Spinner
                        android:id="@+id/pathChapterValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/AppTheme.DescriptionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/journey_path_verse" />

                    <Spinner
                        android:id="@+id/pathStartVerse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/AppTheme.DescriptionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/journey_path_endVerse" />

                    <Spinner
                        android:id="@+id/pathEndVerse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

            </TableLayout>

            <TextView
                style="@style/AppTheme.FormFieldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journey_path_description_title" />

            <EditText
                android:id="@+id/pathDescriptionValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:gravity="start"
                android:hint="@string/journey_path_description_title"
                android:inputType="textMultiLine"
                android:text="@={viewModel.pathDescription}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/jEditor_cancel_path"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.cancelPath()}"
                android:text="@string/bible_close" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/jEditor_submit_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.enableSubmitPathBtn}"
                android:onClick="@{() -> viewModel.submitPath()}"
                android:text="@string/app_action_done" />

        </LinearLayout>

    </LinearLayout>

</layout>