<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="mg.maniry.tenymana.ui.game.solution.SolutionViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/solutionScreen"
        style="@style/AppTheme.PathsListCont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/solutionScreenTitle"
            style="@style/AppTheme.SolutionTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@{viewModel.title}"
            tools:text="Matthiew 1" />

        <TextView
            android:id="@+id/solutionScreenScore"
            style="@style/AppTheme.Title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@{viewModel.score}"
            app:drawableTopCompat="@drawable/ic_star"
            tools:text="60" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/solutionScreenStar0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_start_desc"
                android:src="@drawable/ic_star_rate"
                app:isVisible="@{viewModel.stars[0]}" />

            <ImageView
                android:id="@+id/solutionScreenStar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_start_desc"
                android:src="@drawable/ic_star_rate"
                app:isVisible="@{viewModel.stars[1]}" />

            <ImageView
                android:id="@+id/solutionScreenStar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_start_desc"
                android:src="@drawable/ic_star_rate"
                app:isVisible="@{viewModel.stars[2]}" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/solutionScreenSmallView"
            style="@style/AppTheme.PathsListBody"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:isVisible="@{!viewModel.showBigView}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/solutionScreenVerse"
                    style="@style/AppTheme.VerseTexView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.singleVerseText}"
                    tools:text="In the beginning ..." />

                <ImageButton
                    android:id="@+id/solutionScreenExpandBtn"
                    style="@style/AppTheme.RoundImageBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/solution_expand_description"
                    android:onClick="@{() -> viewModel.showPreviousVerses()}"
                    android:src="@drawable/ic_more_horizontal"
                    app:isVisible="@{viewModel.showExpandBtn}" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/solutionScreenBigView"
            style="@style/AppTheme.PathsListBody"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:isVisible="@{viewModel.showBigView}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/solutionScreenVersesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </FrameLayout>

        <Button
            android:id="@+id/solutionSaveAndContinueBtn"
            style="@style/AppTheme.RedBtn"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:onClick="@{() ->viewModel.saveAndContinue()}"
            android:text="@string/app_action_next" />
    </LinearLayout>
</layout>
